tests/typing/pass/array/const_array.act
contract A

constructor()

creates

  uint[3] x := [1, 2, 3]
  int[3][2][3] y := [
                      [ [0,0,0], [0,0,0] ],
                      [ [0,0,0], [0,0,0] ],
                      [ [0,0,0], [0,0,0] ]
                    ]

transition f()

updates

  y[0] := [ [1,2,3], [4,5,6] ]
  y[1][0] := [7,8,9]

ensures
  post(y)[ if pre(y)[1][1] == post(y)[1][1] then 0 else 100 ][0][0] >= 0
